@@ -1,0 +1,31 @@
+<?php
+/** Dolgan (долган тыла)
+ *
+ * @file
+ * @ingroup Languages
+ *
+ * @author Srishti Sethi
+ */
+
+$fallback = 'ru';
+
+$namespaceNames = [
+	NS_MEDIA            => 'Миэдийэ',
+	NS_SPECIAL          => 'Анал',
+	NS_TALK             => 'Ырытыы',
+	NS_USER             => 'Кыттыылаак',
+	NS_USER_TALK        => 'Кыттыылаак_ырытыыта',
+	NS_PROJECT_TALK     => '$1_ырытыыта',
+	NS_FILE             => 'Файл',
+	NS_FILE_TALK        => 'Файл_ырытыыта',
+	NS_MEDIAWIKI        => 'МиэдийэБики',
+	NS_MEDIAWIKI_TALK   => 'МиэдийэБики_ырытыыта',
+	NS_TEMPLATE         => 'Калыып',
+	NS_TEMPLATE_TALK    => 'Калыып_ырытыыта',
+	NS_HELP             => 'Көмө',
+	NS_HELP_TALK        => 'Көмө_ырытыыта',
+	NS_CATEGORY         => 'Категория',
+	NS_CATEGORY_TALK    => 'Категория_ырытыыта',
+];
+
+$linkTrail = '/^([a-zабвгдеёжзийклмнңоөпрсһтуүфхцчшщъыьэюя]+)(.*)$/sDu';
