@@ -122,6 +122,7 @@ because of Phabricator reports.
   under the language code "ks". "ks-arab" and "ks-deva" are preserved for
   backwards compatibility. "ks-deva" may be removed in a future release.
 * (T395223) Added language support for Yucatec Maya (yua).
+* (T397435) Added language support for Dolgan (dlg).
 * …
 
 === Breaking changes in 1.45 ===
